2010-01-04  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c: Added missing include of math.h for functions
	lround and round.

2009-11-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.c (gtt_project_get_secs_current): return the time for
	the currently selected diary entry instead of the head of the task
	list.

2009-11-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c (status_icon_popup_menu): Change the hide
	window menu text.

	* src/log.c (printf_project): Added option to log the current
	diary entry (Patch #1984744). Thanks Matt Simmons for the patch.

2009-11-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Fix LIBGNOMEUI related variable substitution. Make
	it buildable with recent versions of libgnomeui.

2009-11-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c, src/menucmd.c: Add ability to hide main
	window by right clicking the status icon. Thanks Kip Warner for
	the patch.

2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
	Check that the column_references tree is not NULL before calling
	g_tree_destroy.

2009-09-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_expander_state):
	return without any further processing if states is NULL.

	* src/file-io.c (gtt_post_ctree_config): don't call
	gtt_projects_tree_set_expander_state when the expander state is
	NULL.

2009-06-29  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/gtt.scm: Set unlimited guile stack (Fixes #1402562)

	* src/ghtml.c (gtt_ghtml_new): properly initialize guile
	environment.

2009-06-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/Makefile.am: Removed task_select.glade from the data files
	list.

	* src/notes-area.c (struct NotesArea_s): Made the task entry a
	combobox and added an "edit task" button.